--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -19,4 +19,4 @@ jobs:
                   # Edit the following environment variables
                   GIST_ID: 144abd4d8455a38d13648f8b260c4ae6 # The ID portion from your gist url
                   ALL_COMMITS: true # If `true` it will count all commits, if `false` it will count your last year commits
-                  K_FORMAT: false # If `true`, large numbers will be formatted with a "k", for example "1.5k"
+                  K_FORMAT: true # If `true`, large numbers will be formatted with a "k", for example "1.5k"
